--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="center">
                 <header>
                     <div class="logo">
-                        <img src="images/teslalogo.jpg" alt="">
+                        <img src="images/teslalogo.png" alt="">
                     </div>
                     <div class="menu">
                         <a href="#">Opção 1</a>
@@ -28,7 +28,16 @@
                         <a href="#">Opção 2</a>
                     </div>
                 </header>
+                <div class="title">
+                    <h2>Model X</h2>
+                    <p>Order Online <a href="#">Now on our website!</a></p>
+                </div><!--title-->
+                <div class="btn">
+                    <a href="#">Order Now</a>
+                    <a style="background-color: #ccc; color: black;">Learn More</a>
+                </div>
         </div> <!--center-->
    </section><!--main-->
+
 </body>
 </html>
