doing the 2nd part

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </div>
                 </header>
                 <div class="title">
-                    <h2>Model X</h2>
+                    <h2 style="color: white;">Model X</h2>
                     <p>Order Online <a href="#">Now on our website!</a></p>
                 </div><!--title-->
                 <div class="btn">
@@ -38,6 +38,10 @@
                 </div>
         </div> <!--center-->
    </section><!--main-->
-
+<section class="quite">
+    <div class="newt">
+        <h2>New Model Y</h2>
+    </div>
+</section>
 </body>
 </html>
