--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
                         <img src="images/teslalogo.png" alt="">
                     </div>
                     <div class="menu">
-                        <a href="#">Opção 1</a>
-                        <a href="#">Opção 2</a>
-                        <a href="#">Opção 3</a>
-                        <a href="#">Opção 4</a>
-                        <a href="#">Opção 5</a>
+                        <a href="#">Model S</a>
+                        <a href="#">Model 3</a>
+                        <a href="#">Model X</a>
+                        <a href="#">Model Y</a>
+                        <a href="#">Solar Roof</a>
+                        <a href="#">Solar Panels</a>
                     </div>
                     <div class="menu">
-                        <a href="#">Opção 1</a>
-                        <a href="#">Opção 2</a>
+                        <a href="#"><img width="26" height="26" src="https://img.icons8.com/ios-filled/50/FFFFFF/user-male-circle.png" alt="user-male-circle"/></a>
+                        <a href="#"><img width="26" height="26" src="https://img.icons8.com/ios-filled/100/FFFFFF/globe--v1.png" alt="globe--v1"/></a>
+                        <a href="#"><img width="26" height="26" src="https://img.icons8.com/ios-filled/100/FFFFFF/help.png" alt="help"/></a>
                     </div>
                 </header>
                 <div class="title">
