arranging the menu

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
                         <a href="#">Solar Roof</a>
                         <a href="#">Solar Panels</a>
                     </div>
-                    <div class="menu">
+                    <div class="menutwo">
                         <a href="#"><img width="26" height="26" src="https://img.icons8.com/ios-filled/50/FFFFFF/user-male-circle.png" alt="user-male-circle"/></a>
                         <a href="#"><img width="26" height="26" src="https://img.icons8.com/ios-filled/100/FFFFFF/globe--v1.png" alt="globe--v1"/></a>
                         <a href="#"><img width="26" height="26" src="https://img.icons8.com/ios-filled/100/FFFFFF/help.png" alt="help"/></a>
                     </div>
                 </header>
                 <div class="title">
-                    <h2 style="color: white;">Model X</h2>
+                    <h2 style="color: white;">Model S</h2>
                     <p>Order Online <a href="#">Now on our website!</a></p>
                 </div><!--title-->
                 <div class="btn">
