--- a/index.html
+++ b/index.html
@@ -43,7 +43,15 @@
 <section class="quite">
     <div class="newt">
         <h2>New Model Y</h2>
+        <p>Federal Tax Credit at Purchase</p>
+    </div><!--quite-->
+</section><!--newt-->
+<section class="modelx">
+    <div class="mx">
+        <h2>Model x</h2>
+        <p>Free Supercharging Included</p>
     </div>
+    
 </section>
 </body>
 </html>
