--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:wght@100;300;400;500;700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="stylesheet.css">
     <title>Tesla</title>
 </head>
@@ -31,7 +31,7 @@
                     </div>
                 </header>
                 <div class="title">
-                    <h2 style="color: white;">Model S</h2>
+                    <h2 style="color: white;">Model 3</h2>
                     <p>Order Online <a href="#">Now on our website!</a></p>
                 </div><!--title-->
                 <div class="btn">
@@ -48,10 +48,15 @@
 </section><!--newt-->
 <section class="modelx">
     <div class="mx">
-        <h2>Model x</h2>
+        <h2>Model X</h2>
+        <p>Free Supercharging Included</p>
+    </div><!--mx-->
+</section><!--modelx-->
+<section class="models">
+    <div class="ms">
+        <h2>Model S</h2>
         <p>Free Supercharging Included</p>
     </div>
-    
 </section>
 </body>
 </html>
