--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
                         <img src="images/teslalogo.png" alt="">
                     </div>
                     <div class="menu">
-                        <a href="#">Model S</a>
                         <a href="#">Model 3</a>
-                        <a href="#">Model X</a>
                         <a href="#">Model Y</a>
-                        <a href="#">Solar Roof</a>
+                        <a href="#">Model X</a>
+                        <a href="#">Model S</a>
                         <a href="#">Solar Panels</a>
+                        <a href="#">Solar Roof</a>
                     </div>
                     <div class="menutwo">
                         <a href="#"><img width="26" height="26" src="https://img.icons8.com/ios-filled/50/FFFFFF/user-male-circle.png" alt="user-male-circle"/></a>
@@ -34,7 +34,7 @@
                     <h2 style="color: white;">Model 3</h2>
                     <p>Order Online <a href="#">Now on our website!</a></p>
                 </div><!--title-->
-                <div class="btn">
+                <div class="btnm3">
                     <a href="#">Order Now</a>
                     <a style="background-color: #ccc; color: black;">Learn More</a>
                 </div>
@@ -44,6 +44,10 @@
     <div class="newt">
         <h2>New Model Y</h2>
         <p>Federal Tax Credit at Purchase</p>
+        <div class="btnmy">
+            <a href="#">Order Now</a>
+            <a style="background-color: #ccc; color:black;" href="#">Learn More</a>
+        </div>
     </div><!--quite-->
 </section><!--newt-->
 <section class="modelx">
@@ -56,7 +60,19 @@
     <div class="ms">
         <h2>Model S</h2>
         <p>Free Supercharging Included</p>
-    </div>
-</section>
+    </div><!--ms-->
+</section><!--models-->
+<section class="solar">
+    <div class="sp">
+        <h2>Solar Panels</h2>
+        <p>Schedule a Virtual Consultation</p>
+    </div><!--sp-->
+</section><!--solar-->
+<section class="roof">
+    <div class="sr">
+        <h2>Solar Roof</h2>
+        <p>Produce Clean Energy From Your Roof</p>
+    </div><!--sr-->
+</section><!--roof-->
 </body>
 </html>
