--- a/index.html
+++ b/index.html
@@ -48,13 +48,17 @@
             <a href="#">Order Now</a>
             <a style="background-color: #ccc; color:black;" href="#">Learn More</a>
         </div>
-    </div><!--quite-->
-</section><!--newt-->
+    </div><!--newt-->
+</section><!--quite-->
 <section class="modelx">
     <div class="mx">
         <h2>Model X</h2>
         <p>Free Supercharging Included</p>
     </div><!--mx-->
+    <div class="btnx">
+        <a href="#">Order Now</a>
+        <a style="background-color: #ccc; color: black;" href="#">Learn More</a>
+    </div>
 </section><!--modelx-->
 <section class="models">
     <div class="ms">
