--- a/index.html
+++ b/index.html
@@ -80,3 +80,15 @@
 </section><!--roof-->
 </body>
 </html>
+<footer>
+    1 Before the Federal Tax Credit, Model Y Long Range AWD starts at $50,630. Price includes Destination and Order Fees but exclude taxes and other fees. Subject to change. Vehicle shown has upgrades that will increase the price. The $7,500 Federal Tax Credit is available to eligible buyers and subject to MSRP caps. Not all vehicles, customers or finance options will be eligible. Terms apply.
+    <div class="rodape">
+        Tesla © 2025
+Privacidade e Legalidade
+Recall de veículos
+Contato
+Notícias
+Receba atualizações
+Locais
+    </div>
+</footer>
