--- a/index.html
+++ b/index.html
@@ -58,13 +58,17 @@
     <div class="btnx">
         <a href="#">Order Now</a>
         <a style="background-color: #ccc; color: black;" href="#">Learn More</a>
-    </div>
+    </div><!--btnx-->
 </section><!--modelx-->
 <section class="models">
     <div class="ms">
         <h2>Model S</h2>
         <p>Free Supercharging Included</p>
     </div><!--ms-->
+    <div class="btns">
+        <a href="#">Order Now</a>
+        <a style="background-color:#ccc; color: black;" href="#">Learn More</a>
+    </div>
 </section><!--models-->
 <section class="solar">
     <div class="sp">
