--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="center">
                 <header>
                     <div class="logo">
-                        <img src="images/teslalogo.png" alt="">
+                        <a href="index.html"><img src="images/teslalogo.png" alt=""></a>
                     </div>
                     <div class="menu">
                         <a href="#">Model 3</a>
@@ -36,7 +36,7 @@
                 </div><!--title-->
                 <div class="btnm3">
                     <a href="#">Order Now</a>
-                    <a style="background-color: #ccc; color: black;">Learn More</a>
+                    <a style="background-color: #ccc; color: black;" href="#">Learn More</a>
                 </div>
         </div> <!--center-->
    </section><!--main-->
@@ -68,19 +68,27 @@
     <div class="btns">
         <a href="#">Order Now</a>
         <a style="background-color:#ccc; color: black;" href="#">Learn More</a>
-    </div>
+    </div><!--btns-->
 </section><!--models-->
 <section class="solar">
     <div class="sp">
         <h2>Solar Panels</h2>
         <p>Schedule a Virtual Consultation</p>
     </div><!--sp-->
+    <div class="btnsol">
+        <a href="#">Order Now</a>
+        <a style="background-color: #ccc; color: black;" href="#">Learn More</a>
+    </div><!--btnsol-->
 </section><!--solar-->
 <section class="roof">
     <div class="sr">
         <h2>Solar Roof</h2>
         <p>Produce Clean Energy From Your Roof</p>
     </div><!--sr-->
+    <div class="btnroof">
+        <a href="#">Order Now</a>
+        <a style="background-color: #ccc; color: black;" href="#">Learn More</a>
+    </div>
 </section><!--roof-->
 </body>
 <footer>
