--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <title>Tesla</title>
 </head>
 <body>
