--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <a href="index.html"><img src="images/teslalogo.png" alt=""></a>
                     </div>
                     <div class="menu">
-                        <a href="#">Model 3</a>
+                        <a href="#">Model a</a>
                         <a href="#">Model Y</a>
                         <a href="#">Model X</a>
                         <a href="#">Model S</a>
