--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                     </div>
                     <div class="menu">
                         <a href="#">Model a</a>
-                        <a href="#">Model Y</a>
-                        <a href="#">Model X</a>
-                        <a href="#">Model S</a>
+                        <a href="#">Nossa Missão</a>
+                        <a href="#">O Que Entregamos</a>
+                        <a href="#">Diagnóstico Crítico</a>
                         <a href="#">Solar Panels</a>
                         <a href="#">Solar Roof</a>
                     </div>
@@ -32,7 +32,7 @@
                     </div>
                 </header>
                 <div class="title">
-                    <h2 style="color: white;">Model 3</h2>
+                    <h2 style="color: white;">Método Blindagem Empresarial</h2>
                     <p>Order Online <a href="#">Now on our website!</a></p>
                 </div><!--title-->
                 <div class="btnm3">
